
public class StringBus
{
    public const string GroundLayer = "Ground";

    public const string ANIM_IDLE = "Idle";
    public const string ANIM_WALK = "Walk";
    public const string ANIM_RUN = "Run";
    public const string ANIM_WIN = "Win";
    public const string ANIM_DEAD = "Dead";
    public const string ANIM_ATTACK = "Attack";
}
